FEAT: Interactions between two plots.

--- a/modules/website/files/assets/css/default.css
+++ b/modules/website/files/assets/css/default.css
@@ -1697,6 +1697,12 @@ hr
 #dropDown2{
 	margin-bottom: 0.5em;
 }
+#refresh{
+
+	height: 10px;
+	width: 40px;
+}
+
 
 #popSearch{
 	margin-right: 10px;
