--- a/modules/website/files/assets/css/default.css
+++ b/modules/website/files/assets/css/default.css
@@ -1962,6 +1962,15 @@ ul.contact li a.icon-rss:before
 			line-height: 1;
 
   }
+	.tooltip {
+  background-color: black;
+  border: none;
+  border-radius: 5px;
+  padding: 15px;
+  min-width: 400px;
+  text-align: left;
+  color: white;
+}
 .countries {
 	    fill: none;
 	    stroke: #fff;
