add Y453F popular search

--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -12,6 +12,7 @@
         <div layout="row">
           <label id="popular">Popular Search: </label>
           <label id="popular">&nbsp;&nbsp; <a class="text-primary" ng-href='#' ng-click = "search('D614G')""> D614G </a></label>
+          <label id="popular">&nbsp;&nbsp; <a class="text-primary" ng-href='#' ng-click = "search('Y453F')""> Y453F </a></label>
         </div>
       </md-card-content>
 
