--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -12,6 +12,7 @@
         <div layout="row">
           <label id="popular">Popular Search: </label>
           <label id="popular">&nbsp;&nbsp; <a class="text-primary" ng-href='#' ng-click = "search('D614G')""> D614G </a></label>
+          <label id="popular">&nbsp;&nbsp; <a class="text-primary" ng-href='#' ng-click = "search('Y453F')""> Y453F </a></label>
         </div>
       </md-card-content>
 
@@ -282,16 +283,6 @@
           <table>
         </div>
 
-        <md-button class="md-raised md-primary" id="state" ng-click="stateToggle()">Toggle State Data</md-button>
-
-        <div ng-show="stateVisilble">
-          <table border="1" class=" table table-striped table-bordered table-hover" id="t03" ng-show="stateVisilble">
-            <tr ng-repeat="ele in hashState | orderBy: 'key'">
-              <td> {{ele.key}} </td> <td> {{ ele.count }} </td>
-            </tr>
-          </table>
-
-        </div>
 
         <section layout="row" layout-sm="column" layout-align="left center" layout-wrap>
           <md-input-container >
