--- a/modules/website/beaconApp/src/app/components/main/main.component.html
+++ b/modules/website/beaconApp/src/app/components/main/main.component.html
@@ -104,6 +104,19 @@
 			<div class="example-container mat-elevation-z8">
         <table mat-table [dataSource]="hits" matSort multiTemplateDataRows>
 
+					<ng-container matColumnDef="expand">
+						<th mat-header-cell  *matHeaderCellDef >  </th>
+						<td mat-cell   *matCellDef="let element">
+				      <div *ngIf="!expanded" >
+				        <button  *ngIf="element.position!==1" [class.example-expanded-row]="expandedElement === element"
+				      (click)="expandedElement = expandedElement === element ? null : element;">
+				      	<span *ngIf="expandedElement !==element" >+</span>
+								<span *ngIf="expandedElement ===element" >-</span>
+				        </button>
+				        </div>
+        		</td>
+					</ng-container>
+
 					<ng-container matColumnDef="name">
 						<th mat-header-cell  *matHeaderCellDef > Dataset name </th>
 						<td mat-cell   *matCellDef="let element"> {{element.info.name}} </td>
@@ -137,6 +150,13 @@
 					<ng-container matColumnDef="frequency">
 						<th mat-header-cell *matHeaderCellDef > Frequency </th>
 						<td mat-cell *matCellDef="let element"> {{element.frequency}} % </td>
+					</ng-container>
+
+					<ng-container matColumnDef="accessions" >
+						<th mat-header-cell *matHeaderCellDef > Accessions Download </th>
+						<td mat-cell *matCellDef="let element">
+							<span *ngIf="element.datasetId === 'cn'"> <mat-icon>vertical_align_bottom</mat-icon> </span>
+							</td>
 					</ng-container>
 
 					<ng-container matColumnDef="expandedDetail">
@@ -182,8 +202,7 @@
 
 					<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 			    <tr mat-row *matRowDef="let element;  columns: displayedColumns;"
-			            class="example-element-row"
-									[class.example-expanded-row]="expandedElement === element" (click)="expandedElement = expandedElement === element ? null : element"></tr>
+			            class="example-element-row"></tr>
 					<tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
 				</table>
