Download data and fixing table expansions

--- a/modules/website/beaconApp/src/app/components/main/main.component.css
+++ b/modules/website/beaconApp/src/app/components/main/main.component.css
@@ -23,7 +23,7 @@
       padding: 2px 5px 1px !important;
 }
 .full-width-field {
-   width: 250px !important;
+   width: 60% !important;
 }
 
 .button{
