--- a/modules/website/beaconApp/src/app/components/main/main.component.html
+++ b/modules/website/beaconApp/src/app/components/main/main.component.html
@@ -21,7 +21,7 @@
               <mat-form-field class="full-width-field" appearance="legacy" *ngIf="sMin == null && sMax == null && eMin == null && eMax == null">
                 <!--<label>Query Position REF>ALT</label>-->
                 <div data-tip="(REF)(Start coordinate position)(ALT).">
-                  <input matInput  type="text" placeholder="C8782T" name="inputText" [(ngModel)]="inputText"  >
+                  <textarea matInput  rows="2" cols="60" type="text" placeholder="A23403G:C8782T" name="inputText" [(ngModel)]="inputText"  ></textarea>
                   <!--<input matInput id="search" placeholder="8782 C>T" ng-model="inputText" ng-required="'true'" ng-keyup="$event.keyCode == 13 && query()"">-->
                 </div>
               </mat-form-field>
@@ -155,7 +155,7 @@
 					<ng-container matColumnDef="accessions" >
 						<th mat-header-cell *matHeaderCellDef > Accessions Download </th>
 						<td mat-cell *matCellDef="let element">
-							<span *ngIf="element.datasetId === 'cn'"> <mat-icon>vertical_align_bottom</mat-icon> </span>
+							<span *ngIf="element.datasetId === 'cn'"> <a href="javascript: void(0);" (click)="download()"><mat-icon>vertical_align_bottom</mat-icon></a> </span>
 							</td>
 					</ng-container>
 
@@ -207,50 +207,58 @@
 
 				</table>
 		</div>
+		<div *ngIf="visualIndex == 0">
+			<mat-card class="example-card" >
+				<mat-card-content >
+					<span> No samples matching the search criteria, refine search by checking the missing variant/s</span>
+				</mat-card-content>
+			</mat-card>
+		</div>
+		<div *ngIf="visualIndex != 0">
+			<section layout="row" layout-sm="column" layout-align="left center" layout-wrap>
+			<!--<button mat-raised-button color="primary" class="button" (click)="stateVisilble = !stateVisilble">Toggle State Data</button>-->
+			<mat-card class="example-card" >
+				<mat-card-content *ngIf="states.length">
+				<table  class="table table-striped table-bordered table-hover" matSort (matSortChange)="stateSortData($event)" >
+					<thead>
+						<tr>
+							<th mat-sort-header="regions"> Region</th>
+							<th  mat-sort-header="count"> Count </th>
+							<th  mat-sort-header="frequency"> Frequency </th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr   *ngFor="let item of statePageOfItems " (click)="stateHistogram(item.regions)">
+							<td > {{item.regions}} </td>
+							<td > {{ item.count }} </td>
+							<td > {{ item.frequency }}% </td>
+						</tr>
+					</tbody>
+				</table>
+				<div class=" pagination pb-0 pt-3">
+						<jw-pagination [items]="states"  (changePage)="onChangeStatePage($event)"></jw-pagination>
+				</div>
+				</mat-card-content >
+				<mat-card-content *ngIf="!states.length">
+					<span> No Regions data available for the searched variants</span>
+				</mat-card-content>
+			</mat-card>
+			<button mat-raised-button color="primary" class="button" (click)="this.visual()" *ngIf="!vis" >Generate Visual</button>
+			  <mat-form-field appearance="legacy">
+			    <div data-tip="Change Dataset to update visualisation">
+			      <mat-select id="dropDown2" name="type" [(ngModel)]="visualIndex" (selectionChange)="graphDataGenerator(hits,visualIndex);" >
+			        <mat-option *ngFor="let hit of hits" [value]="hit.info.name">
+			        {{hit.info.name}}
+			        </mat-option>
+			      </mat-select>
+			    </div>
+			  </mat-form-field>
+				<button mat-raised-button color="primary" class="button" (click)="this.refreshGraph()" *ngIf="vis" >Reset</button>
 
-		<section layout="row" layout-sm="column" layout-align="left center" layout-wrap>
-		<!--<button mat-raised-button color="primary" class="button" (click)="stateVisilble = !stateVisilble">Toggle State Data</button>-->
-		<mat-card class="example-card" >
-			<mat-card-content *ngIf="states.length">
-			<table  class="table table-striped table-bordered table-hover" matSort (matSortChange)="stateSortData($event)" >
-				<thead>
-					<tr>
-						<th mat-sort-header="regions"> Region</th>
-						<th  mat-sort-header="count"> Count </th>
-						<th  mat-sort-header="frequency"> Frequency </th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr   *ngFor="let item of statePageOfItems " (click)="stateHistogram(item.regions)">
-						<td > {{item.regions}} </td>
-						<td > {{ item.count }} </td>
-						<td > {{ item.frequency }}% </td>
-					</tr>
-				</tbody>
-			</table>
-			<div class=" pagination pb-0 pt-3">
-					<jw-pagination [items]="states"  (changePage)="onChangeStatePage($event)"></jw-pagination>
-			</div>
-			</mat-card-content >
-			<mat-card-content *ngIf="!states.length">
-				<span> No Regions data available for the searched variants</span>
-			</mat-card-content>
-		</mat-card>
-		<button mat-raised-button color="primary" class="button" (click)="this.visual()" *ngIf="!vis" >Generate Visual</button>
-		  <mat-form-field appearance="legacy">
-		    <div data-tip="Change Dataset to update visualisation">
-		      <mat-select id="dropDown2" name="type" [(ngModel)]="visualIndex" (selectionChange)="graphDataGenerator(hits,visualIndex);" >
-		        <mat-option *ngFor="let hit of hits" [value]="hit.info.name">
-		        {{hit.info.name}}
-		        </mat-option>
-		      </mat-select>
-		    </div>
-		  </mat-form-field>
-			<button mat-raised-button color="primary" class="button" (click)="this.refreshGraph()" *ngIf="vis" >Reset</button>
-
-			</section>
-		    <div id="choropleth" ></div>
-		    <div id="histogram"></div>
+				</section>
+			    <div id="choropleth" ></div>
+			    <div id="histogram"></div>
+		</div>
 		</mat-card-content>
 
 	</mat-card>
