--- a/modules/website/beaconApp/src/app/app.component.html
+++ b/modules/website/beaconApp/src/app/app.component.html
@@ -9,6 +9,7 @@
 				<li><a [routerLink]="['']" accesskey="1" title="">Home</a></li>
 				<li *ngIf="!login" ><a [routerLink]="['query']"  accesskey="2" title="">Query sBeacon</a></li>
 				<li *ngIf="isAuthenticated" ><a [routerLink]="['main']"  accesskey="2" title="">Query sBeacon</a></li>
+				<li><a [routerLink]="['search']"  accesskey="2" title="">Similarity search</a></li>
 				<li><a href="https://bioinformatics.csiro.au/covid-19-sbeacon/" target="_blank" accesskey="3" title="">Methods</a></li>
         <li *ngIf="login">
           <a  *ngIf="!isAuthenticated" routerLink="/login"> Login </a>
