--- a/modules/website/beaconApp/src/app/components/main/main.component.html
+++ b/modules/website/beaconApp/src/app/components/main/main.component.html
@@ -20,7 +20,7 @@
 
               <mat-form-field class="full-width-field" appearance="legacy" *ngIf="sMin == null && sMax == null && eMin == null && eMax == null">
                 <!--<label>Query Position REF>ALT</label>-->
-                <div data-tip="(REF)(Start coordinate position)(ALT).">
+                <div data-tip="(REF)(Start coordinate position)(ALT)-separate multiple variants with ':' or '&'.">
                   <textarea matInput  rows="2" cols="60" type="text" placeholder="A23403G:C8782T" name="inputText" [(ngModel)]="inputText"  ></textarea>
                   <!--<input matInput id="search" placeholder="8782 C>T" ng-model="inputText" ng-required="'true'" ng-keyup="$event.keyCode == 13 && query()"">-->
                 </div>
@@ -101,6 +101,10 @@
 	</mat-card>
 	<mat-card class="example-card" *ngIf="hits.length">
     <mat-card-content *ngIf="!warning">
+			<mat-card-title>
+					<button mat-raised-button color="accent" (click)="this.similaritySearch()" ><span>Similarity search</span></button>
+			</mat-card-title>
+
 			<div class="example-container mat-elevation-z8">
         <table mat-table [dataSource]="hits" matSort multiTemplateDataRows>
 
