--- a/modules/website/beaconApp/src/app/components/main/main.component.html
+++ b/modules/website/beaconApp/src/app/components/main/main.component.html
@@ -12,6 +12,7 @@
 						<label id="popular">&nbsp;&nbsp; <a  ng-href='#' (click)="search('Y453F')"> Y453F </a></label>
 						<label id="popular">&nbsp;&nbsp; <a  ng-href='#' (click)="search('spike')"> Spike Protein </a></label>
 						<label id="popular">&nbsp;&nbsp; <a  ng-href='#' (click)="search('ORF6')"> ORF6 </a></label>
+						<input id="iupac_input" type="checkbox" [name]="iupac" [checked]="iupac" (change)="onChange()" > Enable ambiguity codes search
           </div>
         </mat-card-content>
 
@@ -104,6 +105,7 @@
     <mat-card-content *ngIf="!warning">
 			<mat-card-title>
 					<button mat-raised-button color="accent" (click)="this.similaritySearch()" ><span>Similarity search</span></button>
+					<span id="alertMessage"> {{alertMessage}}</span>
 			</mat-card-title>
 
 			<div class="example-container mat-elevation-z8">
