FEAT:  B.1.1.7 link added

--- a/modules/website/beaconApp/src/app/components/main/main.component.html
+++ b/modules/website/beaconApp/src/app/components/main/main.component.html
@@ -12,6 +12,7 @@
 						<label id="popular">&nbsp;&nbsp; <a  ng-href='#' (click)="search('Y453F')"> Y453F </a></label>
 						<label id="popular">&nbsp;&nbsp; <a  ng-href='#' (click)="search('spike')"> Spike Protein </a></label>
 						<label id="popular">&nbsp;&nbsp; <a  ng-href='#' (click)="search('ORF6')"> ORF6 </a></label>
+						<label id="popular">&nbsp;&nbsp; <a  ng-href='#' (click)="search('UKV')"> B.1.1.7 </a></label>
 						<input id="iupac_input" type="checkbox" [name]="iupac" [checked]="iupac" (change)="onChange()" > Enable ambiguity codes search
           </div>
         </mat-card-content>
